safe-exceptions and screenshoot MVP

--- a/cropper.cabal
+++ b/cropper.cabal
@@ -24,6 +24,7 @@ executable cropper
     build-depends:
         base ^>=4.17.2.1,
         X11,
+        safe-exceptions,
         managed,
         cairo,
         cropper
