--- a/cropper.cabal
+++ b/cropper.cabal
@@ -13,8 +13,12 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  MyLib
-    build-depends:    base ^>=4.17.2.1
+    exposed-modules:  Win, Store
+    build-depends:    base ^>=4.17.2.1,
+                      cairo,
+                      managed,
+                      safe-exceptions,
+                      X11
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -23,11 +27,11 @@ executable cropper
     main-is:          Main.hs
     build-depends:
         base ^>=4.17.2.1,
-        X11,
-        safe-exceptions,
-        managed,
-        cairo,
         cropper
+        -- sdl2,
+        -- vector,
+        -- linear,
+        -- loop
 
     hs-source-dirs:   app
     default-language: Haskell2010
