--- a/cropper.cabal
+++ b/cropper.cabal
@@ -27,11 +27,11 @@ executable cropper
     main-is:          Main.hs
     build-depends:
         base ^>=4.17.2.1,
-        cropper
-        -- sdl2,
+        cropper,
+        sdl2,
+        loop
         -- vector,
         -- linear,
-        -- loop
 
     hs-source-dirs:   app
     default-language: Haskell2010
