--- a/cropper.cabal
+++ b/cropper.cabal
@@ -18,7 +18,9 @@ library
                       cairo,
                       managed,
                       safe-exceptions,
-                      X11
+                      X11,
+                      bmp,
+                      bytestring
     hs-source-dirs:   src
     default-language: Haskell2010
 
