add keyboard loop

--- a/horus.cabal
+++ b/horus.cabal
@@ -30,8 +30,8 @@ executable cropper
     build-depends:
         base ^>=4.17.2.1,
         cropper,
-        sdl2, sdl2-image,
-        loop
+        sdl2,
+        sdl2-image
         -- vector,
         -- linear,
 
