--- a/horus.cabal
+++ b/horus.cabal
@@ -13,14 +13,12 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  Win, Store, UI.State, UI.Zoom, UI.Shoot, UI.Movement, UI.Events
+    exposed-modules:  Win, UI.State, UI.Zoom, UI.Shoot, UI.Movement, UI.Events
     build-depends:    base ^>=4.17.2.1,
                       cairo,
                       managed,
                       safe-exceptions,
                       X11,
-                      bmp,
-                      bytestring,
                       sdl2
     hs-source-dirs:   src
     default-language: Haskell2010
