ci: replace haskell action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,14 @@ jobs:
   build:
     # https://docs.github.com/en/actions/using-github-hosted-runners/using-github-hosted-runners/about-github-hosted-runners
     name: CI Build Binary
-    runs-on: ubuntu-22.04 # version binded to setup-haskell version
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
       - run: |
           sudo apt update -y
           sudo apt install -y libsdl2-dev libcairo2-dev libx11-dev libxext-dev libxinerama-dev libxrandr-dev libxss-dev
-      - uses: actions/setup-haskell@v1.1
+      - uses: haskell-actions/setup@v2
+        with:
+          ghc-version: '9.4.8'
+          cabal-version: '3.10.3.0'
       - run: cabal build
