--- a/horus.cabal
+++ b/horus.cabal
@@ -13,7 +13,7 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  Win, UI.State, UI.Zoom, UI.Shoot, UI.Movement, UI.Events
+    exposed-modules:  Win, UI.State, UI.Zoom, UI.Shoot, UI.Movement, UI.Events, UI.Draw
     build-depends:    base ^>=4.17.2.1,
                       cairo,
                       managed,
