--- a/horus.cabal
+++ b/horus.cabal
@@ -13,7 +13,7 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  Win, UI.State, UI.Zoom, UI.Shoot, UI.Movement, UI.Events, UI.Draw
+    exposed-modules:  Win, Store, UI.State, UI.Shoot, UI.Events, UI.Draw
     build-depends:    base ^>=4.17.2.1,
                       cairo,
                       managed,
@@ -22,6 +22,7 @@ library
                       sdl2
     hs-source-dirs:   src
     default-language: Haskell2010
+    other-modules:    UI.Zoom, UI.Movement
 
 executable horus
     import:           warnings
