--- a/horus.cabal
+++ b/horus.cabal
@@ -17,6 +17,7 @@ library
     build-depends:    base ^>=4.17.2.1,
                       cairo,
                       managed,
+                      process,
                       safe-exceptions,
                       X11,
                       sdl2
