--- a/horus.cabal
+++ b/horus.cabal
@@ -13,7 +13,7 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  Win, UI.State, UI.Shoot, UI.Events, UI.Draw
+    exposed-modules:  Win, UI.State, UI.Shoot, UI.Events, UI.Draw, UI.Movement
     build-depends:    base ^>=4.17.2.1,
                       cairo,
                       managed,
@@ -23,7 +23,7 @@ library
                       sdl2
     hs-source-dirs:   src
     default-language: Haskell2010
-    other-modules:    UI.Zoom, UI.Movement
+    other-modules:    UI.Zoom
 
 executable horus
     import:           warnings
